--- a/templates/restaurant-menu.html
+++ b/templates/restaurant-menu.html
@@ -16,36 +16,21 @@
     <div class="container">
       <h3>{{cat.name}}</h3>
       <div class="row">
+        {% for cat in cat.fooditem_set.all %}
         <div class="col-md-4">
           <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="..." alt="Card image cap">
+            <img class="card-img-top" src="{{cat.image.url}}">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">{{cat.name}}</h5>
+              <span>BDT: {{cat.price}}<br></span>
+              <div>
+                <a href="#" class="btn btn-secondary mt-2">Add to cart</a>
+              </div>
+              
             </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="..." alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="..." alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-        </div>
+        {% endfor %}
       </div>
     </div>
     {% endfor %}
