--- a/templates/addtocart.html
+++ b/templates/addtocart.html
@@ -66,7 +66,7 @@
          <span><strong>Rs. 500.00</strong></span>
        </li>
       </ul>
-      <div class="d-grid"><a href="#" class="btn btn-outline-secondary">Place Order</a></div>
+      <div class="d-grid"><a href="#" class="btn btn-outline-secondary">Checkout</a></div>
     </div>
    </div>
   </div>
