--- a/templates/restaurant-menu.html
+++ b/templates/restaurant-menu.html
@@ -9,22 +9,24 @@
     <img class="d-block w-100" src="{% static 'images/banner/restaurant.jpg' %}" alt="...">
     <h1 class="display-6 text-center">{{restaurant.name}}- {{restaurant.address}}</h1>
     <p class="lead text-center">Reviews: </p>
-    <hr class="my-4">
+    <!-- <hr class="my-4"> -->
   </div>
   <div class="container">
     {% for cat in category %}
-    <div class="container">
+    
+    <div class="container mt-4">
+      <hr>
       <h3>{{cat.name}}</h3>
       <div class="row">
         {% for cat in cat.fooditem_set.all %}
         <div class="col-md-4">
-          <div class="card" style="width: 18rem;">
+          <div class="card " style="width: 18rem;">
             <img class="card-img-top" src="{{cat.image.url}}">
             <div class="card-body">
               <h5 class="card-title">{{cat.name}}</h5>
               <span>BDT: {{cat.price}}<br></span>
               <div>
-                <a href="#" class="btn btn-secondary mt-2">Add to cart</a>
+                <button href="#" class="btn btn-outline-secondary mt-2">Add to cart</button>
               </div>
               
             </div>
@@ -36,11 +38,6 @@
     {% endfor %}
   </div>
 </div>
-
-
-
-
-
 
 
 {% endblock body %}
