--- a/templates/home.html
+++ b/templates/home.html
@@ -70,7 +70,7 @@
 <!-- End 1st Product Slider -->
 
 <!-- Payment Info Section -->
-<div class="container my-5">
+<!-- <div class="container my-5">
  <div class="row">
   <div class="col-sm-3">
    <div class="card mb-3">
@@ -101,7 +101,7 @@
    </div>
   </div>
  </div>
-</div>
+</div> -->
 <!-- End Payment Info Section -->
 
 <!-- 2nd Product Slider -->
