--- a/templates/base1.html
+++ b/templates/base1.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
     <!-- <script src="{% static 'js/changepassword.js' %}"></script> -->
+    <script src="{% static 'js/cart.js' %}" async></script>
    
 
 
@@ -37,7 +38,7 @@
            <li class="nav-item">
              <a class="nav-link active" aria-current="page" href="/">Home</a>
            </li>
-           <li class="nav-item dropdown">
+           <!-- <li class="nav-item dropdown">
              <a class="nav-link dropdown-toggle text-white" href="#" id="electronicsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                Electronics
              </a>
@@ -45,8 +46,8 @@
                <li><a class="dropdown-item" href="{% url 'mobile' %}">Mobile</a></li>
                <li><a class="dropdown-item" href="{% url 'checkout' %}">checkout</a></li>
              </ul>
-           </li>
-           <li class="nav-item dropdown">
+           </li> -->
+           <!-- <li class="nav-item dropdown">
              <a class="nav-link dropdown-toggle text-white" href="#" id="fashionDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                Fashion
              </a>
@@ -54,7 +55,7 @@
                <li><a class="dropdown-item" href="{% url 'detail' %}">detail</a></li>
                <li><a class="dropdown-item" href="#">Bottom Wear</a></li>
              </ul>
-           </li>
+           </li> -->
          </ul>
          <form class="d-flex">
            <input class="form-control me-1" type="search" placeholder="Search Items/Restaurant..." aria-label="Search">
@@ -109,8 +110,9 @@
     <script src="{% static 'js/owl.carousel.min.js' %}"></script>
     <script src="{% static 'js/all.min.js' %}"></script>
     <script src="{% static 'js/myscript.js' %}"></script>
-    <script src="{% static 'js/cart.js' %}"></script>
+    
   </body>
   <script src="{% static 'js/formValidation.js' %}"></script>
+  
   
 </html>
