--- a/templates/restaurant-menu.html
+++ b/templates/restaurant-menu.html
@@ -18,15 +18,15 @@
       <hr>
       <h3>{{cat.name}}</h3>
       <div class="row">
-        {% for cat in cat.fooditem_set.all %}
+        {% for fooditem in cat.fooditem_set.all %}
         <div class="col-md-4">
           <div class="card " style="width: 18rem;">
-            <img class="card-img-top" src="{{cat.image.url}}">
+            <img class="card-img-top" src="{{fooditem.image.url}}">
             <div class="card-body">
-              <h5 class="card-title">{{cat.name}}</h5>
-              <span>BDT: {{cat.price}}<br></span>
+              <h5 class="card-title">{{fooditem.name}}</h5>
+              <span>BDT: {{fooditem.price}}<br></span>
               <div>
-                <button href="#" class="btn btn-outline-secondary mt-2">Add to cart</button>
+                <button class="btn btn-outline-secondary mt-2 update-cart">Add to cart</button>
               </div>
               
             </div>
@@ -41,3 +41,4 @@
 
 
 {% endblock body %}
+
