--- a/templates/addtocart.html
+++ b/templates/addtocart.html
@@ -3,75 +3,69 @@
 {% block title %}Cart{% endblock title %}
 {% block body %}
 <div class="container my-5">
- <div class="row">
-  <h1 class="text-center mb-5">Shopping Cart</h1>
-  <div class="col-sm-8">
-  <div class="card">
-   <div class="card-body">
-    <h3>Cart</h3>
-    {% for item in items %}
-    <div class="row">
-      
-     <div class="col-sm-3 text-center align-self-center"><img src="{{item.product.image.url}}" alt="" srcset="" class="img-fluid img-thumbnail shadow-sm" height="150" width="150"> </div>
-     <div class="col-sm-9">
-      <div>
-       <h5>{{item.product.name}}</h5>
-       <p class="mb-2 text-muted small">Description: Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum quas, nihil vel velit sed, quos consequatur maiores odio libero eius est in mollitia quo minus dolorum culpa consectetur, ipsam unde!</p>
-       <div class="my-3">
-        <label for="quantity">Quantity:</label>
-        <a class="minus-cart btn"><i class="fas fa-minus-square fa-lg"></i></a>
-          <span id="quantity">{{item.quantity}}</span>
-        <a class="plus-cart btn"><i class="fas fa-plus-square fa-lg"></i></a>
-       </div> 
-       <div class="d-flex justify-content-between">
-        <a href="#" class="btn btn-sm btn-secondary mr-3">Remove item </a>
-        <p class="mb-0"><span><strong>Rs. {{item.get_total}}</strong></span></p>
-       </div>
+  <div class="row">
+   <h1 class="text-center mb-5">Shopping Cart</h1>
+   <div class="col-sm-8">
+   <div class="card">
+     {% for item in items %}
+    <div class="card-body">
+     <div class="row">
+      <div class="col-sm-3 text-center align-self-center"><img src="{{item.product.image.url}}" alt="" srcset="" class="img-fluid img-thumbnail shadow-sm" height="150" width="150"> </div>
+      <div class="col-sm-9">
+        <h5>{{item.product.name}}</h5>
+        <p class="mb-2 text-muted small">Description: Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum quas, nihil vel velit sed, quos consequatur maiores odio libero eius est in mollitia quo minus dolorum culpa consectetur, ipsam unde!</p>
+        <div class="my-3">
+         <label for="quantity">Quantity:</label>
+         <a class="minus-cart btn"><i class="fas fa-minus-square fa-lg"></i></a>
+           <span id="quantity">{{item.quantity}}</span>
+         <a class="pl us-cart btn"><i class="fas fa-plus-square fa-lg"></i></a>
+        </div> 
+        <div class="d-flex justify-content-between">
+         <button href="#" class="btn btn-sm btn-secondary mr-3 item-remove">Remove item </button>
+         <p class="mb-0"><span><strong>Rs. 110.00</strong></span></p>
+        </div>
+        <hr class="text-muted">
       </div>
      </div>
      
     </div>
-    <hr class="text-muted">
     {% endfor %}
-    
-
-   </div>
-   </div>
-  </div>
-
-  <div class="col-sm-4">
-   <div class="card">
-    <div class="card-body">
-      <h3>The Total Amount of</h3>
-      <ul class="list-group">
-       <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">Amount<span id="#total">BDT. <span>{{order.get_cart_total}}</span></li>
-       <li class="list-group-item d-flex justify-content-between align-items-center px-0">Shipping<span>Rs. <span id="#shipping">70.00</span></li>
-       <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
-        <div>
-           <strong>Total</strong> <small>(including VAT)</small>
-         </div>
-         <span><strong>Rs. 500.00</strong></span>
-       </li>
-      </ul>
-      <div class="d-grid"><a href="#" class="btn btn-outline-secondary">Checkout</a></div>
     </div>
    </div>
-  </div>
-  
- </div>
-</div>
-<div class="container">
- <div class="row">
-  <div class="col-sm-8">
-   <div class="card">
-    <div class="card-body">
-      <h5 class="mb-4">We accept</h5>
-      <img src="{% static 'images/payment.png' %}" alt="" class="img-fluid">
+ 
+   <div class="col-sm-4">
+    <div class="card">
+     <div class="card-body">
+       <h3>The Total Amount of</h3>
+       <ul class="list-group">
+        <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">Amount<span>Rs. 430.00</span></li>
+        <li class="list-group-item d-flex justify-content-between align-items-center px-0">Shipping<span>Rs. 70.00</span></li>
+        <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
+         <div>
+            <strong>Total</strong> <small>(including VAT)</small>
+          </div>
+          <span><strong>Rs. 500.00</strong></span>
+        </li>
+       </ul>
+       <div class="d-grid"><a href="{% url 'checkout' %}" class="btn btn-primary">Place Order</a></div>
+     </div>
     </div>
-  </div>
+   </div>
+   
   </div>
  </div>
-</div>
+ <div class="container">
+  <div class="row">
+   <div class="col-sm-8">
+    <div class="card">
+     <div class="card-body">
+       <h5 class="mb-4">We accept</h5>
+       <img src="{% static 'app/images/payment.png' %}" alt="" class="img-fluid">
+     </div>
+   </div>
+   </div>
+  </div>
+ </div>
 {% endblock body %}
 
 
