--- a/templates/addtocart.html
+++ b/templates/addtocart.html
@@ -16,13 +16,13 @@
         <p class="mb-2 text-muted small">Description: Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum quas, nihil vel velit sed, quos consequatur maiores odio libero eius est in mollitia quo minus dolorum culpa consectetur, ipsam unde!</p>
         <div class="my-3">
          <label for="quantity">Quantity:</label>
-         <button  class="btn update-cart" data-item="{{item.product.id}}" data-action="remove"><i class="fas fa-minus-square fa-lg" ></i></button>
+         <button  class="btn update-cart" data-fooditem="{{item.product.id}}" data-action="remove"><i class="fas fa-minus-square fa-lg" ></i></button>
           <span id="quantity">{{item.quantity}}</span>
-         <button  class="btn update-cart" data-item="{{item.product.id}}" data-action="add"><i class="fas fa-plus-square fa-lg" ></i></button>
+         <button  class="btn update-cart" data-fooditem="{{item.product.id}}" data-action="add"><i class="fas fa-plus-square fa-lg" ></i></button>
         </div> 
         <div class="d-flex justify-content-between">
-         <button href="#" class="btn btn-sm btn-secondary mr-3 item-remove">Remove item </button>
-         <p class="mb-0"><span><strong>Rs. 110.00</strong></span></p>
+         <button data-fooditem="{{item.product.id}}" data-action="delete" class="btn btn-sm btn-secondary mr-3 update-cart">Remove item </button>
+         <p class="mb-0"><span><strong>BDT. {{item.get_total}}</strong></span></p>
         </div>
         <hr class="text-muted">
       </div>
@@ -36,18 +36,18 @@
    <div class="col-sm-4">
     <div class="card">
      <div class="card-body">
-       <h3>The Total Amount of</h3>
-       <ul class="list-group">
-        <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">Amount<span>Rs. 430.00</span></li>
-        <li class="list-group-item d-flex justify-content-between align-items-center px-0">Shipping<span>Rs. 70.00</span></li>
+       <h3 class="m-1 p-2 text-center bg-secondary text-light rounded">Cart Total</h3>
+       <ul class="list-group pt-4 pb-4 pl-1 pr-1">
+        <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">Total Amount<span>BDT. {{order.get_cart_total}}</span></li>
+        <li class="list-group-item d-flex justify-content-between align-items-center px-0">Shipping Charge<span>BDT. {{order.shipping_charge}}</span></li>
         <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
          <div>
             <strong>Total</strong> <small>(including VAT)</small>
           </div>
-          <span><strong>Rs. 500.00</strong></span>
+          <span><strong>BDT. {{grand_total}}</strong></span>
         </li>
        </ul>
-       <div class="d-grid"><a href="{% url 'checkout' %}" class="btn btn-primary">Place Order</a></div>
+       <div class="d-grid mt-4 mb-4"><a href="{% url 'checkout' %}" class="btn btn-outline-secondary">Checkouts</a></div>
      </div>
     </div>
    </div>
@@ -69,5 +69,9 @@
 {% endblock body %}
 
 
+
+{% block JS %}
+<script type="text/javascript" src="{% static 'js/cart.js' %}" async></script>
+{% endblock JS %}
 
 
