--- a/templates/base1.html
+++ b/templates/base1.html
@@ -1,44 +1,77 @@
-<!doctype html>
+<!DOCTYPE html>
 {% load static %}
 <html lang="en">
   <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="shortcut icon" href="#" />
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
+
     <!--Owl Carousel CSS-->
-    <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}" />
 
     <!--FontAwesome CSS-->
-    <link rel="stylesheet" href="{% static 'css/all.min.css' %}">
+    <!-- <link rel="stylesheet" href="{% static 'css/all.min.css' %}" /> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  
 
     <!--Custom CSS-->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-
-    <!-- <script src="{% static 'js/changepassword.js' %}"></script> -->
-    <script src="{% static 'js/cart.js' %}" async></script>
-   
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
 
 
+    <script type="text/javascript">
+    
+      var user = "{{request.user}}";
 
-    <title>Food Ordering App | {% block title %} {% endblock title %} </title>
+      function getToken(name) {
+        let cookieValue = null;
+        if (document.cookie && document.cookie !== "") {
+          const cookies = document.cookie.split(";");
+          for (let i = 0; i < cookies.length; i++) {
+            const cookie = cookies[i].trim();
+            // Does this cookie string begin with the name we want?
+            if (cookie.substring(0, name.length + 1) === name + "=") {
+              cookieValue = decodeURIComponent(
+                cookie.substring(name.length + 1)
+              );
+              break;
+            }
+          }
+        }
+        return cookieValue;
+      }
+      const csrftoken = getToken("csrftoken");
+    </script>
+    <!-- <script src="{% static 'js/cart.js' %}" async></script> -->
+    <!-- <script src="{% static 'js/localStorage.js' %}" async></script> -->
+
+    <title>Food Ordering App | {% block title %} {% endblock title %}</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-     <div class="container">
-       <a class="navbar-brand" href="{% url 'home' %}">Food Ordering</a>
-       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-         <span class="navbar-toggler-icon"></span>
-       </button>
-       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-           <li class="nav-item">
-             <a class="nav-link active" aria-current="page" href="/">Home</a>
-           </li>
-           <!-- <li class="nav-item dropdown">
+      <div class="container">
+        <a class="navbar-brand" href="{% url 'home' %}">Food Ordering</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
+            </li>
+            <!-- <li class="nav-item dropdown">
              <a class="nav-link dropdown-toggle text-white" href="#" id="electronicsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                Electronics
              </a>
@@ -47,7 +80,7 @@
                <li><a class="dropdown-item" href="{% url 'checkout' %}">checkout</a></li>
              </ul>
            </li> -->
-           <!-- <li class="nav-item dropdown">
+            <!-- <li class="nav-item dropdown">
              <a class="nav-link dropdown-toggle text-white" href="#" id="fashionDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                Fashion
              </a>
@@ -56,81 +89,110 @@
                <li><a class="dropdown-item" href="#">Bottom Wear</a></li>
              </ul>
            </li> -->
-         </ul>
-         <form class="d-flex">
-           <input class="form-control me-1" type="search" placeholder="Search Items/Restaurant..." aria-label="Search">
-           <button class="btn btn-outline-danger" type="submit"><i class="fas fa-search"></i></button>
-         </form>
-         <div>
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            {% if request.user.is_authenticated %}
-           <li class="adc nav-item dropdown mx-2 active">
-              <a class="nav-link dropdown-toggle text-white" href="#" id="profileDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                <i class="fas fa-user"></i> {{request.user.username}}
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="profileDropdown">
-                <li><a class="dropdown-item" href="{% url 'userProfile' %}"><i class="fas fa-user"></i> Profile</a></li>
-                <li><a class="dropdown-item" href="{% url 'orders' %}"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Orders</a></li>
-                <li><a class="dropdown-item" href="{% url 'change_password' %}"><i class="fas fa-key"></i> Change Password</a></li>
-                <li><a class="dropdown-item" href="{% url 'logout' %}"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
-              </ul>
-            </li>
-            
-            {% else %}
-            <li class="nav-item mx-2">
-              <a href="{% url 'login' %}" class="nav-link text-white">Login</a>
-             </li>
-             <li class="nav-item mx-2">
-              <a href="{% url 'register' %}" class="nav-link text-white">Registration</a>
-             </li>
-            {% endif %}
-            <li class="nav-item mx-2">
-              <a href="{% url 'cart' %}" class="nav-link text-white"><span class="badge bg-danger">{{order.get_cart_items}}</span> <i class="fas fa-shopping-cart"></i> </a>
-             </li>
           </ul>
-         </div>
-       </div>
-     </div>
+          <form class="d-flex">
+            <input
+              class="form-control me-1"
+              type="search"
+              placeholder="Search Items/Restaurant..."
+              aria-label="Search"
+            />
+            <button class="btn btn-outline-danger" type="submit">
+              <i class="fas fa-search"></i>
+            </button>
+          </form>
+          <div>
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              {% if request.user.is_authenticated %}
+              <li class="adc nav-item dropdown mx-2 active">
+                <a
+                  class="nav-link dropdown-toggle text-white"
+                  href="#"
+                  id="profileDropdown"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  <i class="fas fa-user"></i> {{request.user.username}}
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="profileDropdown">
+                  <li>
+                    <a class="dropdown-item" href="{% url 'userProfile' %}"
+                      ><i class="fas fa-user"></i> Profile</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="{% url 'orders' %}"
+                      ><i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                      Orders</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="{% url 'change_password' %}"
+                      ><i class="fas fa-key"></i> Change Password</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="{% url 'logout' %}"
+                      ><i class="fas fa-sign-out-alt"></i> Logout</a
+                    >
+                  </li>
+                </ul>
+              </li>
+
+              {% else %}
+              <li class="nav-item mx-2">
+                <a href="{% url 'login' %}" class="nav-link text-white"
+                  >Login</a
+                >
+              </li>
+              <li class="nav-item mx-2">
+                <a href="{% url 'register' %}" class="nav-link text-white"
+                  >Registration</a
+                >
+              </li>
+              {% endif %}
+              <li class="nav-item mx-2">
+                <a href="{% url 'cart' %}" class="nav-link text-white"
+                  ><span class="badge bg-danger" id="cart-total">0</span>
+                  <i class="fas fa-shopping-cart"></i
+                ></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </nav>
-    {% block banner_slider %} {% endblock banner_slider %}
-    {% block livesale %} {% endblock livesale %}
-    {% block body %} {% endblock body %}
+    {% block banner_slider %} {% endblock banner_slider %} {% block livesale %}
+    {% endblock livesale %} {% block body %} {% endblock body %}
 
     <!-- Start Footer -->
     <footer class="container-fluid bg-dark text-center p-2 mt-5">
-        <small class="text-white">Copyright &copy; 2021 || Food Ordering Application || </small>
-        <img src="{% static 'images/payment.png' %}" alt="" srcset="" class="img-fluid" height="2px">
-    </footer> <!-- End Footer -->
+      <small class="text-white"
+        >Copyright &copy; 2021 || Food Ordering Application ||
+      </small>
+      <img
+        src="{% static 'images/payment.png' %}"
+        alt=""
+        srcset=""
+        class="img-fluid"
+        height="2px"
+      />
+    </footer>
+    <!-- End Footer -->
 
+    {% block JS %}
+    <!-- <script src="https://code.jquery.com/jquery-3.6.0.slim.js" integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY=" crossorigin="anonymous"></script> -->
+    <!-- <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script> -->
     <!-- Jquery -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
-    <script src="{% static 'js/owl.carousel.min.js' %}"></script>
-    <script src="{% static 'js/all.min.js' %}"></script>
-    <script src="{% static 'js/myscript.js' %}"></script>
-    <script type="text/javascript">
-      var user = '{{request.user}}'
-      function getToken(name) {
-        let cookieValue = null;
-        if (document.cookie && document.cookie !== '') {
-            const cookies = document.cookie.split(';');
-            for (let i = 0; i < cookies.length; i++) {
-                const cookie = cookies[i].trim();
-                // Does this cookie string begin with the name we want?
-                if (cookie.substring(0, name.length + 1) === (name + '=')) {
-                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-                    break;
-                }
-            }
-        }
-        return cookieValue;
-      }
-      const csrftoken = getToken('csrftoken');
-    </script>
+    <script type="text/javascript" src="{% static 'js/owl.carousel.min.js' %}" async></script>
+    <script type="text/javascript" src="{% static 'js/all.min.js' %}" async></script>
+    <script type="text/javascript" src="{% static 'js/myscript.js' %}" async></script>
+    <script type="text/javascript" src="{% static 'js/formValidation.js' %}" async></script>
+    {% endblock JS %}
   </body>
-  <script src="{% static 'js/formValidation.js' %}"></script>
-  
-  
 </html>
