--- a/templates/demo.html
+++ b/templates/demo.html
@@ -1,63 +1,44 @@
 {% extends 'base1.html' %}
-{% load static %}
-{% block title %}Cart{% endblock title %}
+{%load static%}
+{% load crispy_forms_tags %}
+{% block title %}all-restaurants{% endblock title %}
 {% block body %}
-<div class="container mt-4">
-  <h3 class="text-center">Shopping cart</h3>
+
+<div class="container">
+  <div class="jumbotron mt-3">
+    <img class="d-block w-100" src="{% static 'images/banner/restaurant.jpg' %}" alt="...">
+    <h1 class="display-6 text-center">{{restaurant.name}}- {{restaurant.address}}</h1>
+    <p class="lead text-center">Reviews: </p>
+    <!-- <hr class="my-4"> -->
+  </div>
   <div class="container">
-    <div class="row">
-      <div class="col-md-7 border rounded">
-        <table class="table">
-          <thead class="text-muted">
-            <tr class="small text-uppercase">
-              <th class="text-center" scope="col" width="120">Product</th>
-              <th class="text-center" scope="col" width="120">Quantity</th>
-              <th class="text-center" scope="col" width="120">Subtotal</th>
-              <th class="text-center" scope="col"width="120">Action</th>
-            </tr>
-          </thead>
-          <tbody>
-            {% for item in items %}
-            <tr>
-              <td>
-                <figure class="itemside align-item-center">
-                  <div class="aside"><img src="{{item.product.image.url}}" class="img-sm" height="70px" width="70 px">
-                  </div>
-                  <figcaption class="info">
-                    <a href="#" class="title-text-dark">{{item.product.name}}</a>
-                    <p class="text-muted small">text</p>
-                  </figcaption>
-                </figure>
-              </td>>
-              <td>
-                <div class="d-flex">
-                  <a class="minus-cart btn"><i class="fas fa-minus-square fa-lg"></i></a>
-                    <span class="m-auto" id="quantity">3</span>
-                  <a class="plus-cart btn"><i class="fas fa-plus-square fa-lg"></i></a>
-                 </div> 
-              </td>
-              <td>
-                <div class="price-wrap mt-2">
-                  <h5 class="price text-bold">BDT{{item.product.price}}</h5>
-                </div>
-              </td>
-              <td>
-                <div class="text-right">
-                  <a href="#" class="btn btn-danger">Remove</a>
-                </div>
-              </td>
-            {% endfor %}
-          </tbody>
-        </table>
-      </div>
-      <div class="col-md-4 border rounded">
-        <h3 class="text-center">Total Amount</h3>
+    {% for cat in category %}
+    
+    <div class="container mt-4">
+      <hr>
+      <h3>{{cat.name}}</h3>
+      <div class="row">
+        {% for fooditem in cat.fooditem_set.all %}
+        <div class="col-md-4">
+          <div class="card " style="width: 18rem;">
+            <img class="card-img-top" src="{{fooditem.image.url}}">
+            <div class="card-body">
+              <h5 class="card-title">{{fooditem.name}}</h5>
+              <span>BDT: {{fooditem.price}}<br></span>
+              <div>
+                <button data-fooditem="{{fooditem.id}}" data-action="add" class="btn btn-outline-secondary mt-2 add-btn update-cart">Add to cart</button>
+              </div>
+              
+            </div>
+          </div>
+        </div>
+        {% endfor %}
       </div>
     </div>
+    {% endfor %}
   </div>
 </div>
+
+
 {% endblock body %}
-
-
-
 
