--- a/templates/restaurant-menu.html
+++ b/templates/restaurant-menu.html
@@ -26,7 +26,7 @@
               <h5 class="card-title">{{fooditem.name}}</h5>
               <span>BDT: {{fooditem.price}}<br></span>
               <div>
-                <button data-fooditem="{{fooditem.id}}" data-action="add" class="btn btn-outline-secondary mt-2 add-btn update-cart">Add to cart</button>
+                <button data-fooditem="{{fooditem.id}}" data-action="add" class="btn btn-outline-secondary mt-2 add-btn update-cart" id="{{fooditem.id}}">Add to cart</button>
               </div>
               
             </div>
@@ -38,7 +38,11 @@
     {% endfor %}
   </div>
 </div>
-
-
 {% endblock body %}
+
+
+{% block JS %}
+<!-- <script type="text/javascript" src="{% static 'js/localStorage.js' %}" async></script> -->
+<script type="text/javascript" src="{% static 'js/cart.js' %}" async></script>
+{% endblock JS%}
 
