--- a/templates/addtocart.html
+++ b/templates/addtocart.html
@@ -4,15 +4,15 @@
 {% block body %}
 <div class="container my-5">
   <div class="row">
-   <h1 class="text-center mb-5">Shopping Cart</h1>
+   <h1 class="text-center mb-5 text-uppercase">Shopping Cart</h1>
    <div class="col-sm-8">
    <div class="card">
-     {% for item in items %}
+     {% for item in orderItems %}
     <div class="card-body">
      <div class="row">
       <div class="col-sm-3 text-center align-self-center"><img src="{{item.product.image.url}}" alt="" srcset="" class="img-fluid img-thumbnail shadow-sm" height="150" width="150"> </div>
       <div class="col-sm-9">
-        <h5>{{item.product.name}}</h5>
+        <h5 class="text-uppercase">{{item.product.name}}</h5>
         <p class="mb-2 text-muted small">Description: Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum quas, nihil vel velit sed, quos consequatur maiores odio libero eius est in mollitia quo minus dolorum culpa consectetur, ipsam unde!</p>
         <div class="my-3">
          <label for="quantity">Quantity:</label>
@@ -21,7 +21,7 @@
          <button  class="btn update-cart" data-fooditem="{{item.product.id}}" data-action="add"><i class="fas fa-plus-square fa-lg" ></i></button>
         </div> 
         <div class="d-flex justify-content-between">
-         <button data-fooditem="{{item.product.id}}" data-action="delete" class="btn btn-sm btn-secondary mr-3 update-cart">Remove item </button>
+         <button data-fooditem="{{item.product.id}}" data-action="delete" class="btn btn-sm btn-secondary mr-3 update-cart" data-toggle="modal" data-target="#exampleModal">Remove item </button>
          <p class="mb-0"><span><strong>BDT. {{item.get_total}}</strong></span></p>
         </div>
         <hr class="text-muted">
@@ -36,15 +36,28 @@
    <div class="col-sm-4">
     <div class="card">
      <div class="card-body">
-       <h3 class="m-1 p-2 text-center bg-secondary text-light rounded">Cart Total</h3>
+       <h3 class="m-1 p-2 text-center bg-secondary text-light rounded text-uppercase">Cart Total</h3>
        <ul class="list-group pt-4 pb-4 pl-1 pr-1">
+        {% if order.get_cart_total %}
         <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">Total Amount<span>BDT. {{order.get_cart_total}}</span></li>
+        {% else %}
+        <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">Total Amount<span>BDT. 0.00</span></li>
+        {% endif %}
+
+        {% if order.shipping_charge %}
         <li class="list-group-item d-flex justify-content-between align-items-center px-0">Shipping Charge<span>BDT. {{order.shipping_charge}}</span></li>
+        {% else %}
+        <li class="list-group-item d-flex justify-content-between align-items-center px-0">Shipping Charge<span>BDT. 0.00</span></li>
+        {% endif %}
         <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
          <div>
             <strong>Total</strong> <small>(including VAT)</small>
           </div>
+          {% if order.get_cart_total %}
           <span><strong>BDT. {{grand_total}}</strong></span>
+          {% else %}
+          <span><strong>BDT. 0.00</strong></span>
+          {% endif %}
         </li>
        </ul>
        <div class="d-grid mt-4 mb-4"><a href="{% url 'checkout' %}" class="btn btn-outline-secondary">Checkouts</a></div>
@@ -66,12 +79,36 @@
    </div>
   </div>
  </div>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+ 
 {% endblock body %}
 
 
 
 {% block JS %}
+
 <script type="text/javascript" src="{% static 'js/cart.js' %}" async></script>
+
 {% endblock JS %}
 
 
