--- a/templates/base1.html
+++ b/templates/base1.html
@@ -27,6 +27,8 @@
     
       var user = "{{request.user}}";
 
+
+
       function getToken(name) {
         let cookieValue = null;
         if (document.cookie && document.cookie !== "") {
@@ -153,8 +155,12 @@
               </li>
               {% endif %}
               <li class="nav-item mx-2">
-                <a href="{% url 'cart' %}" class="nav-link text-white"
-                  ><span class="badge bg-danger" id="cart-total">0</span>
+                <a href="{% url 'cart' %}" class="nav-link text-white">
+                  {% if cartObjects %}
+                  <span class="badge bg-danger" id="cart-total">{{cartObjects}}</span>
+                  {% else %}
+                  <span class="badge bg-danger" id="cart-total">0</span>
+                  {% endif %}
                   <i class="fas fa-shopping-cart"></i
                 ></a>
               </li>
@@ -181,18 +187,17 @@
     </footer>
     <!-- End Footer -->
 
-    {% block JS %}
+    
     <!-- <script src="https://code.jquery.com/jquery-3.6.0.slim.js" integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY=" crossorigin="anonymous"></script> -->
     <!-- <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script> -->
     <!-- Jquery -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-
     <script type="text/javascript" src="{% static 'js/owl.carousel.min.js' %}" async></script>
     <script type="text/javascript" src="{% static 'js/all.min.js' %}" async></script>
     <script type="text/javascript" src="{% static 'js/myscript.js' %}" async></script>
     <script type="text/javascript" src="{% static 'js/formValidation.js' %}" async></script>
-    {% endblock JS %}
+    {% block JS %}{% endblock JS %}
   </body>
 </html>
