--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -1,40 +1,104 @@
 {% extends 'base1.html' %}
 {% load static %}
 {% block title %}Buy Now{% endblock title %}
+{% load crispy_forms_tags %}
 {% block body %}
 <div class="container">
  <div class="row mt-5">
-  <div class="col-sm-6">
+  <div class="col-md-6">
     <h5>Shipping Address</h5>
     <hr>
       <div class="card p-0">
         <div class="card-body">
-          <h5>Product: Product 1</h5>
-          <p>Quantity: 2</p>
-          <p class="fw-bold">Price: 100.00</p>
+          <form action="" method="post" novalidate id="shippingForm" name="ShippingForm" onsubmit="return ShippingAddress()">
+            {% csrf_token %}
+            <div class="mb-3 has-validation" id="add_address">
+              <label for="address" class="form-label">Address*</label>
+              <input type="text" class="form-control" id="address" name="address" placeholder="Enter the address...">
+              <small id="emailHelp" class="form-text text-danger"></small>
+              <div class="invalid-feedback">
+                 <small id="emailHelp" class="form-text text-danger"></small>
+               </div>
+             </div>
+
+             <div class="mb-3 has-validation" id="add_area">
+              <label for="area" class="form-label">Area*</label>
+              <input type="text" class="form-control" id="area" name="area" placeholder="Enter the area...">
+              <small id="emailHelp" class="form-text text-danger"></small>
+              <div class="invalid-feedback">
+                 <small id="emailHelp" class="form-text text-danger"></small>
+               </div>
+             </div>
+
+             <div class="row">
+               <div class="col-md-7">
+                <div class="mb-3 has-validation" id="add_houseNo">
+                  <label for="houseNo" class="form-label">House No*</label>
+                  <input type="text" class="form-control" id="houseNo" name="houseNo" placeholder="houseNo...">
+                  <small id="emailHelp" class="form-text text-danger"></small>
+                  <div class="invalid-feedback">
+                     <small id="emailHelp" class="form-text text-danger"></small>
+                   </div>
+                 </div>
+               </div>
+               <div class="col-md-5">
+                <div class="mb-3 has-validation" id="add_zipcode">
+                  <label for="zipcode" class="form-label">Zip Code*</label>
+                  <input type="number" class="form-control" id="zipcode" name="zipcode" placeholder="Zip Code....">
+                  <small id="emailHelp" class="form-text text-danger"></small>
+                  <div class="invalid-feedback">
+                     <small id="emailHelp" class="form-text text-danger"></small>
+                   </div>
+                 </div>
+
+               </div>
+             </div>
+             <div class="form-group">
+              <input type="submit" class="form-control btn-outline-secondary">
+              </div>
+            
+          </form>
         </div>
       </div>
-    <small>Term and Condition: Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, ullam saepe! Iure optio repellat dolor velit, minus rem. Facilis cumque neque numquam laboriosam, accusantium adipisci nisi nihil in et quis?</small>
   </div>
-  <div class="col-sm-4">
-    <div class="box-element">
-      <h5>Order Summary</h5>
-      <hr>
-      {% for item in orderItems %}
-      <div class="cart-row d-flex mb-2">
-        <div style="flex:2 p-4 mb-4"><img class="row-image" style="width:70px;" src="{{item.product.image.url}}"></div>
-        <div style="flex:2"><p class="p-2">{{item.product.name}}</p></div>
-        <div style="flex:1"><p class="p-2">${{item.product.price}}</p></div>
-        <div style="flex:1"><p class="p-2">x{{item.quantity}}</p></div>
-      </div>
-      {% endfor %}
-      <hr>
-      <div class="container">
-        <h4 class="d-flex mt-2">Total:<p class="m-auto p-auto text-right">BDT.{{grand_total}}</p></h4>
-      </div>
-      
+
+  <div class="col-md-1">
+  </div>
+
+  <div class="col-sm-4 mt-5">
+    <div class="card">
+     <div class="card-body">
+       <h3 class="text-center border rounded p-2 m-0">Order Summary</h3>
+       <ul class="list-group pt-4 pb-4 pl-1 pr-1">
+        <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0 ">
+          <span id="image" class="ml-2">Image</span>
+          <span id="name" class="">Name</span>
+          <span id="qty" class="">Qty</span>
+        </li>
+         {% for item in orderItems %}
+        <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
+          <img class="m-2" src="{{item.product.image.url}}" alt="" height="50px" width="50px">
+          <span>{{item.product.name}}</span>
+          <span>x{{item.quantity}}</span>
+          
+        </li>
+        {% endfor %}
+        <hr>
+        <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-2">
+         <div>
+            <strong>Total</strong> <small>(including VAT)</small>
+          </div>
+          {% if grand_total %}
+          <span><strong>BDT. {{grand_total}}</strong></span>
+          {% else %}
+          <span><strong>BDT. 0.00</strong></span>
+          {% endif %}
+  
+        </li>
+       </ul>
+     </div>
     </div>
-  </div>
+   </div>
   </div>
   <div class="row p-4 m-5">
 
