--- a/templates/changepassword.html
+++ b/templates/changepassword.html
@@ -7,7 +7,7 @@
  <div class="row w-50 m-auto">
  <h3 class="text-center mb-4 mt-4">Change Password</h3>
   <div class="col-sm-8 offset-sm-1 m-auto">
-   <form method="POST" action="" id="form" class="shadow p-5 needs-validation" name="changePasswordForm" onsubmit="return changePasswordValidation();" novalidate>
+   <form method="POST" action="" id="changePasswordForm" class="shadow p-5 needs-validation" name="changePasswordForm" novalidate>
     {% csrf_token %}
      <div class="mb-3 from-group has-validation" id="old_password">
        <label for="old_password" class="form-label">Old Password</label>
