--- a/templates/register.html
+++ b/templates/register.html
@@ -22,7 +22,7 @@
     
         <div class="row">
             
-            <form class="form" method="POST" action="">
+            <form class="form" method="POST" action="" id="register-form" name="registerForm" novalidate>
                 {% csrf_token %}
                 <div class="form-group">
                   <label for="exampleInputEmail1">Username</label>
