--- a/templates/base1.html
+++ b/templates/base1.html
@@ -8,7 +8,9 @@
     <link rel="shortcut icon" href="#" />
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous"> -->
+
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 
 
     <!--Owl Carousel CSS-->
@@ -21,6 +23,8 @@
 
     <!--Custom CSS-->
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+
+    <!-- <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script> -->
 
 
     <script type="text/javascript">
@@ -48,12 +52,17 @@
       }
       const csrftoken = getToken("csrftoken");
     </script>
+
+        
+
     <!-- <script src="{% static 'js/cart.js' %}" async></script> -->
     <!-- <script src="{% static 'js/localStorage.js' %}" async></script> -->
 
     <title>Food Ordering App | {% block title %} {% endblock title %}</title>
   </head>
   <body>
+
+    
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
         <a class="navbar-brand" href="{% url 'home' %}">Food Ordering</a>
@@ -169,9 +178,13 @@
         </div>
       </div>
     </nav>
+    
+
+
     {% block banner_slider %} {% endblock banner_slider %} {% block livesale %}
     {% endblock livesale %} {% block body %} {% endblock body %}
 
+  </div>
     <!-- Start Footer -->
     <footer class="container-fluid bg-dark text-center p-2 mt-5">
       <small class="text-white"
@@ -187,17 +200,50 @@
     </footer>
     <!-- End Footer -->
 
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="{% static 'js/jquery-3.6.0.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/jquery.validate.min.js' %}"></script>
+    <script src="{% static 'js/popper.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
     
-    <!-- <script src="https://code.jquery.com/jquery-3.6.0.slim.js" integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY=" crossorigin="anonymous"></script> -->
-    <!-- <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script> -->
+    
+    <!-- <script src="https://code.jquery.com/jquery-3.6.0.slim.js" integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script> -->
+    <!-- <script src="{% static 'js/jquery-3.6.0.js' %}"></script> -->
+    
+    
+    <!-- <script src="{% static 'scripts.js' %}"></script> -->
+    
+
+
     <!-- Jquery -->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script> -->
     <!-- Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script> -->
     <script type="text/javascript" src="{% static 'js/owl.carousel.min.js' %}" async></script>
-    <script type="text/javascript" src="{% static 'js/all.min.js' %}" async></script>
-    <script type="text/javascript" src="{% static 'js/myscript.js' %}" async></script>
-    <script type="text/javascript" src="{% static 'js/formValidation.js' %}" async></script>
+    <!-- <script type="text/javascript" src="{% static 'js/all.min.js' %}" async></script> -->
+    <!-- <script type="text/javascript" src="{% static 'js/myscript.js' %}" async></script> -->
+    <!-- <script type="text/javascript" src="{% static 'js/formValidation.js' %}" async></script> -->
+    <script type="text/javascript" src="{% static 'js/additional-methods.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/jqueryValidation.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/jquery.register.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/jquery.change_password.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/jquery.checkout.js' %}"></script>
+
+    <script type="text/JavaScript">
+      $(document).ready(function(){
+        var msg = document.getElementById("msg-info").innerText
+        if(msg){
+          $(".toast").toast('show');
+        }
+      })
+    </script>
+
+
+
+
     {% block JS %}{% endblock JS %}
   </body>
 </html>
