--- a/templates/home.html
+++ b/templates/home.html
@@ -35,8 +35,8 @@
 <!-- Live Sale Section -->
 <div class="container">
   <div class="row bg-danger text-center p-5 text-white border-bottom shadow">
-    <h1>ORDER AND GET THE YOUR ITEMS</h1>
-    <span>Cash On Delivery Service Avai</span>
+    <h1>ORDER AND GET YOUR ITEMS</h1>
+    <span>Cash On Delivery Service Available</span>
     <small class="fw-lighter">Term and Condition Applied (15% Vat)</small>
   </div>
 </div> 
