--- a/templates/home.html
+++ b/templates/home.html
@@ -35,7 +35,7 @@
 <!-- Live Sale Section -->
 <div class="container">
   <div class="row bg-danger text-center p-5 text-white border-bottom shadow">
-    <h1>ORDER AND GET YOUR ITEMS</h1>
+    <h1>ORDER FOOD AND GET THE ITEMS</h1>
     <span>Cash On Delivery Service Available</span>
     <small class="fw-lighter">Term and Condition Applied (15% Vat)</small>
   </div>
@@ -47,7 +47,7 @@
 <!-- 1st Product Slider -->
 <div class="container">
   <div class="m-3">
-    <h2>All Restaurants</h2>
+    <h2 class="bg-danger text-light text-center p-2">All Restaurants</h2>
 
     <!-- Slider 1 -->
     <div class="owl-carousel" id="slider1">
