final_dev version

--- a/templates/base1.html
+++ b/templates/base1.html
@@ -87,7 +87,7 @@
                Electronics
              </a>
              <ul class="dropdown-menu" aria-labelledby="electronicsDropdown">
-               <li><a class="dropdown-item" href="{% url 'mobile' %}">Mobile</a></li>
+               <li><a class="dropdown-item" href="#">Mobile</a></li>
                <li><a class="dropdown-item" href="{% url 'checkout' %}">checkout</a></li>
              </ul>
            </li> -->
@@ -96,7 +96,7 @@
                Fashion
              </a>
              <ul class="dropdown-menu" aria-labelledby="fashionDropdown">
-               <li><a class="dropdown-item" href="{% url 'detail' %}">detail</a></li>
+               <li><a class="dropdown-item" href="#">detail</a></li>
                <li><a class="dropdown-item" href="#">Bottom Wear</a></li>
              </ul>
            </li> -->
@@ -135,12 +135,12 @@
                       ><i class="fas fa-user"></i> Profile</a
                     >
                   </li>
-                  <li>
-                    <a class="dropdown-item" href="{% url 'orders' %}"
+                  <!-- <li>
+                    <a class="dropdown-item" href="#"
                       ><i class="fa fa-shopping-cart" aria-hidden="true"></i>
                       Orders</a
                     >
-                  </li>
+                  </li> -->
                   <li>
                     <a class="dropdown-item" href="{% url 'change_password' %}"
                       ><i class="fas fa-key"></i> Change Password</a
@@ -202,8 +202,6 @@
       />
     </footer>
     <!-- End Footer -->
-
-    
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="{% static 'js/jquery-3.6.0.js' %}"></script>
