--- a/templates/userProfile.html
+++ b/templates/userProfile.html
@@ -11,7 +11,7 @@
          <a class="nav-link text-center" id="v-pills-order-tab" data-bs-toggle="pill" data-bs-target="#v-pills-order" type="button" role="tab" aria-controls="v-pills-order" aria-selected="false">Orders</a>
          <a class="nav-link text-center" id="v-pills-address-tab" data-bs-toggle="pill" data-bs-target="#v-pills-address" type="button" role="tab" aria-controls="v-pills-address" aria-selected="false">Address</a>
 
-         <a class="nav-link text-center" id="v-pills-change_password-tab" data-bs-toggle="pill" data-bs-target="#v-pills-change_password" type="button" role="tab" aria-controls="v-pills-change_password" aria-selected="false">Change Password</a>
+         <!-- <a class="nav-link text-center" id="v-pills-change_password-tab" data-bs-toggle="pill" data-bs-target="#v-pills-change_password" type="button" role="tab" aria-controls="v-pills-change_password" aria-selected="false">Change Password</a> -->
          <a class="nav-link text-center" id="v-pills-settings-tab" data-bs-toggle="pill" data-bs-target="#v-pills-settings" type="button" role="tab" aria-controls="v-pills-settings" aria-selected="false">Logout</a>
        </div>
 
