Restaurent Review added

--- a/templates/restaurant-menu.html
+++ b/templates/restaurant-menu.html
@@ -8,7 +8,7 @@
   <div class="jumbotron mt-3">
     <img class="d-block w-100" src="{% static 'images/banner/restaurant.jpg' %}" alt="...">
     <h1 class="display-6 text-center">{{restaurant.name}}- {{restaurant.address}}</h1>
-    <p class="lead text-center">Reviews: </p>
+    <p class="lead text-center">Reviews: {{ result}}</p>
     <!-- <hr class="my-4"> -->
   </div>
   <div class="container">
